# hal-discovery

./: README.md  pyproject.toml
demo/: README_demo.txt
jupyter-notebook/: SupplementaryCode1_JupyterNotebook_Kipouros.ipynb
src/hal_discovery/: annotate.py  cli.py  mine.py  paths.py  pipeline.py
src/hal_discovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hal_discovery/steps/: step1_family_space.py  step2_interpro_retrieval.py
